per-capita rmved, updated word count, send to co-authors

--- a/4.mss/tex/main.tex
+++ b/4.mss/tex/main.tex
@@ -62,17 +62,13 @@
 
 
 \noindent
-Number of words - Abstract: 165\\
-Number of words - main text: 5379\\
-% intro 677
-% methods 2335 (175+265+252+199+132+311+166+239+455+141)
-% results 1013 (71+327+615)
-% discussion 1354 (906+264+184)
+Number of words - Abstract: 189\\
+Number of words - main text: 5568\\
 3 Figures in main text.\\
 Number of references: 84\\
 
 \noindent
-\textbf{Keywords:} Species interactions, competition, facilitation, network, population dynamics, interaction strength, per-capita interactions, annual plants.  
+\textbf{Keywords:} Species interactions, competition, facilitation, network, population dynamics, interaction strength, non-trophic, annual plants.  
 
 \section*{Author contributions}
 
@@ -210,19 +206,19 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     For a hypothetical dataset with which all interactions are identifiable, then $B = \tilde B$ and fitting the RIM is not strictly unnecessary. The parameter vectors $r$ and $e$ would still be estimated, but they are independent of the parameters in $\tilde B$ and hence maximization of both likelihoods is independent. Conversely, if no interactions are identifiable then the joint model devolves to the RIM only. In the middle ground---where the majority of datasets are likely to lie---the joint model framework allows us to estimate free interaction parameters when possible, and use $r_i e_j$ estimates when not. An important distinction to make is that the NDDM estimates identifiable interactions only, whereas the RIM estimates all interactions, pairwise identifiable and pairwise unidentifiable. However, by maximising Eq. \ref{loglikjoint} we allow both models to provide good fits to the data but also for $r$ and $e$ to ``adjust'' around inferred values of $\tilde B$. 
 
 
-    \subsection{Rescaling interaction estimates into per capita interactions}
+    \subsection{Making interaction parameters comparable across focal species} 
 
-        The $\beta_{i, j}$ estimates returned by the framework describe the effect of species $j$ on the performance of species $i$. Differences in the magnitude of these interaction terms may thus reflect intrinsic differences in performance, which can vary in time, space and between species. Two species may for example have different baseline values of reproductive fitness. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into \textit{per capita} interaction strengths \parencite{Laska1998}. The appropriate scaling is determined by rewriting the neighbour density-dependent model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
+        The $\beta_{i, j}$ estimates returned by the framework describe the effect of species $j$ on the performance of species $i$. Differences in the magnitude of these interaction terms may thus reflect intrinsic differences in performance, which can vary in time, space and between species. Two species may for example have different baseline values of reproductive fitness. In order to make the effects of interactions comparable between species, the interaction terms returned by both models above can be transformed into scaled interaction strengths \parencite{Laska1998}. The appropriate scaling is determined by rewriting the neighbour density-dependent model (Eq. \ref{nddm}) into a form equivalent to a Lotka-Volterra competition model: 
         \begin{equation}
         f(p_{k}) = \gamma_{d_k} \left ( 1 - \sum_{j=1}^{t} {\beta}''_{d_k, j} X_{d_k, j} \right )
         \label{LVform}
         \end{equation}
-        This reveals that our interaction terms can be rescaled into per-capita interaction strengths by dividing them by the recipient element's intrinsic performance:  
+        This reveals that our interaction terms can be rescaled into interaction strengths by dividing them by the recipient element's intrinsic performance:  
         \begin{equation}
         {\beta}''_{i, j} = \frac{\beta_{i, j}}{\gamma_{i}}
         \label{scaling}
         \end{equation}
-        Though this scaling step is not strictly necessary, for ecological datasets per capita interaction strengths have the benefit of being directly comparable both across species and across environmental contexts where reproductive fitness may vary \parencite{Wootton2005}, leading to a wider range of potential applications.
+        Though this scaling step is not strictly necessary, for ecological datasets these scaled interaction strengths have the benefit of being directly comparable both across species and across environmental contexts where reproductive fitness may vary \parencite{Wootton2005}, leading to a wider range of potential applications.
 
     \subsection{Integrating interaction strengths into models of population dynamics}
 
@@ -252,7 +248,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     \subsection{Case study}
 
        \paragraph{}
-        We applied this framework to an annual wildflower community dataset from Western Australia collected in 2016. This dataset contains over 5000 observations of individual plant seed production from 22 different focal species, and the identity and density of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. We used the framework to quantify interactions between these 22 focal species and 52 neighbour species, and derived per-capita interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Bimler2018} which required experimentally-measured species demographic rates. Viable seed production was used as a measure of performance and modeled with a negative binomial distribution and a log link.
+        We applied this framework to an annual wildflower community dataset from Western Australia collected in 2016. This dataset contains over 5000 observations of individual plant seed production from 22 different focal species, and the identity and density of all neighbouring individuals within a 3 to 5 cm radius of the focal individual. We used the framework to quantify interactions between these 22 focal species and 52 neighbour species, and derived scaled interaction strengths with a well-supported population dynamics model for annual plants with a seed bank \parencite{Levine2009, Bimler2018} which required experimentally-measured species demographic rates. Viable seed production was used as a measure of performance and modeled with a negative binomial distribution and a log link.
         Further details on the data, the model fitting and the procedure for deriving scaled interactions from the population dynamics model are available in the Supplementary Methods \ref{SI:casestudy}.
 
 
@@ -266,10 +262,10 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
 
     \paragraph{}
     %We first applied this joint model to simulated data to verify that the original interaction parameters could be recovered by this framework. We then applied this model to a case study dataset of a diverse annual wildflower community, where focal elements consisted of \textbf{$s = 22$} focal species and up to \textbf{$k = 52$} neighbouring species (the 22 focal species and an additional 30 species) and performance $p$ was measured as viable seed production. 
-    The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM.  When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}), this is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. Interaction estimates were scaled into per-capita interaction strengths, and we applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the per-capita community interaction matrix.
+    The model returned estimates for all 1144 interactions between 22 focal species and 52 interacting species, of which 56.7\% were identifiable and estimated by the NDDM.  When accounting for interactions between focal species only, 82.0\% of interactions were identifiable. We conducted a posterior predictive check comparing simulated performance data from the joint model to observed values (Figure \ref{fig:ppcheckmu2}), this is especially important for verifying that the appropriate distribution and link function are being used for the data at hand. The joint model also returns simulated performance data for the RIM only, which we also checked visually (Supplementary Results \ref{SI:results} Figure \ref{fig:ppcheckmu1}). Model parameters were sampled 1000 times from the 80\% posterior confidence intervals returned by STAN to construct our parameter estimates. Interaction estimates were scaled according to focal intrinsic fitness into interaction strengths comparable between focal species, and we applied bootstrap sampling from each resulting interaction strength distribution to create 1000 samples of the pscaled community interaction matrix.
 
     \paragraph{}
-    For our case study, the resulting community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each per-capita interaction  across all samples. Overall, 63.6\% of focal species had a median interspecific interaction strength which was competitive, making competition the dominant interaction type. The median value of 46.7\% of focal $\times$ neighbour interactions however were facilitative, as were the medians of 43.3\% of all focal $\times$ focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species.
+    For our case study, the resulting community interaction matrix was non-symmetrical and included both positive (competitive) and negative (facilitative) values, as shown in Figures \ref{fig:netwks}.A \& B. Here we represent the community matrix as a network between all 22 focal species, taking the median value of each scaled interaction  across all samples. Overall, 63.6\% of focal species had a median interspecific interaction strength which was competitive, making competition the dominant interaction type. The median value of 46.7\% of focal $\times$ neighbour interactions however were facilitative, as were the medians of 43.3\% of all focal $\times$ focal interactions. As a result, 47.6\% of interactions between pairs of focal species were of opposing signs such that $i$ competes with $j$ but $j$ facilitates $i$. Furthermore, the elements of the diagonal (the effect of a species on itself) were able to be estimated, which allows us to quantify how much a species regulates it's own performance. For 11 of our 22 focal species, the scaled distributions of these intraspecific effects did not overlap with 0, which suggests individuals of those species have a non-trivial effect on other individuals of the same species.
 
 
     %\paragraph{}
@@ -307,7 +303,7 @@ Taken together, identifiable and unidentifiable interaction estimates are then u
     Species interaction networks have a wide range of practical applications, such as evaluating ecosystem response to human-altered landscapes, guiding future management decisions \parencite{Ross2011} or exploring how communities may respond to global warming \parencite{Gorman2019}. Conservation and ecosystem management efforts aimed at regulating species abundances can, for example, use the information provided by an interaction network to prioritise which species to conserve or eradicate based on their role in the community. Such roles can be deduced by a species' position in the interaction network \parencite{Cirtwill2018a} and as illustrated in our case study. Identifying keystone, foundation and other important types of species roles is also helpful for understanding biological diversity, ecosystem integrity and functioning, especially in response to disturbances and other stresses \parencite{Nyakatya2008, Orwin2016, Losapio2017, Narwani2019}. The examples we describe in our case study are not exhaustive, but serve to illustrate how interaction networks can help us understand both community dynamics overall and the effects \& response of specific species towards the community. 
 
     \paragraph{}
-    Quantifying the matrix of per-capita interaction strengths between species in horizontal communities can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. %Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to stability and diversity in plant communities.
+    Quantifying the matrix of scaled interaction strengths between species in horizontal communities can also allow us to explore how the mechanisms maintaining diversity and stability operate in these systems and across a broad number of species. Self-regulation, for example, is an extremely important driver of community stability \parencite{Barabas2017} and arises from how individuals of the same species interact with one another. Whereas same-species effects cannot be estimated by association networks, our framework quantifies intraspecific interactions and allows us to measure the strength and prevalence of competitive and facilitative density-dependence. Measures of intra and interspecific interactions can also allow us to estimate niche overlap between species (for an example, see \cite{Chu2015a}); weak interactions between species suggest that they are not sharing or competing for many resources, and thus may have large niche differences in the community. %Strong competitive self-regulation, and weak interactions between two species, are two of many mechanisms leading to stability and diversity in plant communities.
 
     \paragraph{}
     Another key feature of our model framework is the inclusion of facilitative interactions, which have traditionally been disregarded in plant population models and theoretical frameworks of plant diversity-maintenance. The importance of facilitative interactions to community structure and patterns of abundance has long been recognised \parencite{Callaway1997a} but there is still little consensus on how they may affect biodiversity \parencite{Bruno2003, Brooker2008}. Recent work suggests facilitation may be more widespread than traditionally thought \parencite{Gross2015, Picoche2020} and can benefit species diversity and stability depending on the circumstances \parencite{Coyte2015, Brooker2008}. Our framework provides a means to investigate the prevalence and strength of facilitation across multiple species, and how it may act in relation to competition and species diversity.  
@@ -374,7 +370,7 @@ The authors declare no competing interests.
         \begin{centering}
         % Looks like GITE is in larger font???
         \includegraphics[width=0.5\textwidth]{../../3.analyses/figures_mss/networks_C_F.png}
-        \caption{Competitive (A) and facilitative (B) per-capita interaction networks estimated from our model framework. Competitive and facilitative interactions (A and B) are here shown separately for ease of view but were analysed together. Only focal species are included in these networks, arrows point to species $i$ and line thickness denotes interaction strength. Interaction strengths are given as the median over 1000 samples. Purple coloured nodes correspond to highly abundant native species, whereas green nodes indicate potential keystone species, as further described in Figure \ref{fig:species}.}
+        \caption{Competitive (A) and facilitative (B) scaled interaction networks estimated from our model framework. Competitive and facilitative interactions (A and B) are here shown separately for ease of view but were analysed together. Only focal species are included in these networks, arrows point to species $i$ and line thickness denotes interaction strength. Interaction strengths are given as the median over 1000 samples. Purple coloured nodes correspond to highly abundant native species, whereas green nodes indicate potential keystone species, as further described in Figure \ref{fig:species}.}
         \label{fig:netwks}
        \end{centering}
     \end{figure}  
@@ -391,7 +387,7 @@ The authors declare no competing interests.
     \addtocounter{figure}{-1}
     \begin{figure} [t!]
         \caption{(Previous page.) Understanding interaction effects can help identify species of particular ecological importance to a system. For all graphs, diamonds are species medians across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. The shaded part of the graphs show facilitative (negative) interactions. Dashed lines represent the median value for all focals. Coloured triangles indicate the species refered to in the main text for each of the ecological questions associated with (A), (B) and (C). \\
-        In (A), the x-axis shows the strength of per-capita intraspecific interactions, that is how strongly a focal species interacts with itself, plotted against a focal species' total log abundance (y-axis). Values over $0$ indicate competition, and values less than $0$ indicate facilitation.  The two most abundant natives, \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) in purple, do not seem to compete with themselves any more or less strongly than the median for all species in the system (dashed line). \\
+        In (A), the x-axis shows the strength of scaled intraspecific interactions, that is how strongly a focal species interacts with itself, plotted against a focal species' total log abundance (y-axis). Values over $0$ indicate competition, and values less than $0$ indicate facilitation.  The two most abundant natives, \textit{Velleia rosea} (VERO) and \textit{Podolepsis canescens} (POCA) in purple, do not seem to compete with themselves any more or less strongly than the median for all species in the system (dashed line). \\
         (B) shows the sum of interaction effects of focal species on neighbours (x-axis) against the focal species' total log abundance (x-axis). On the x-axis, values greater than $0$ indicate that a focal species has an overall competitive effect on neighbours, and values less than $0$ indicate that it has an overall facilitative effect. Green diamonds identify species with low overall abundance but strong competitive effects on neighbours: \textit{Trachymene ornata} (TROR) and \textit{Gilberta tenuifolia} (GITE). \\
         (C) decomposes a focal species' net interaction strength into its competitive effects (x-axis) and facilitative effects (y-axis). Red diamonds show the exotic species \textit{Hypochaeris glabra} (HYPO), \textit{Arctotheca calendula} (ARCA) and \textit{Pentameris aroides} (PEAI). The light grey diagonal shows where x = y, species above that line have an overall facilitative effect on other species whereas those below that line have an overall competitive effect.} 
     \end{figure}
@@ -439,7 +435,7 @@ The authors declare no competing interests.
     	In study systems which allow it, a proportion of interaction neighbourhoods can instead be thinned prior to the experiment to randomly remove neighbouring individuals and provide observations for low-density estimates of interactions. Though this steps is not strictly necessary, thinning certain neighbourhoods can also reduce potential confounding effects between the environment and interactions and thus provide more accurate estimates of interaction effects. Environmental data known to affect performance can also be recorded and included in the model (as a random effect for example) to minimise those confounding effects.
 
         \paragraph{} 
-        We required species demographic rates (seed survival and germination) in order to scale model interaction estimates into per-capita interaction strengths. Species demographic rates for 16 of our focal species were estimated from a database of field experiments carried out between 2016 and 2019 where seedbags were placed in the field to estimate germination rates, and ungerminated seeds were evaluated in the lab for survivability.  The remaining species were assigned mean demographic rates from these experiments. Further details on the methods used for collecting those seed rates are available in section \ref{SI:germination}.
+        We required species demographic rates (seed survival and germination) in order to scale model interaction estimates into interaction strengths. Species demographic rates for 16 of our focal species were estimated from a database of field experiments carried out between 2016 and 2019 where seedbags were placed in the field to estimate germination rates, and ungerminated seeds were evaluated in the lab for survivability.  The remaining species were assigned mean demographic rates from these experiments. Further details on the methods used for collecting those seed rates are available in section \ref{SI:germination}.
 
         \subsubsection{Model fitting}
 
@@ -464,12 +460,12 @@ The authors declare no competing interests.
                 \label{fecundity}   
             \end{equation}
         where \(\lambda_{i}\) corresponds to seed number in the absence of interaction effects, and \(\alpha_{ii}\) and \(\alpha_{ij}\) are the interaction strengths between species \(i\) and its intraspecific and interspecific neighbours respectively. Here it is \(\alpha_{ij}\) and \(\alpha_{ii}\) which are equivalent to \(\beta_{d_k, j}\) in Eq.~\ref{nddm} of the main text. 
-        We determine the scaled, per-capita interaction strengths ${\alpha}''$'s by including \(\lambda_{i}\), \(g_{i}\) and \(s_{i}\) in such a way that these variables are cancelled out when the ${\alpha}''$'s are substituted for the $\alpha$'s in our annual plant population model \parencite{Godoy2014, Bimler2018}. 
+        We determine the scaled interaction strengths ${\alpha}''$'s by including \(\lambda_{i}\), \(g_{i}\) and \(s_{i}\) in such a way that these variables are cancelled out when the ${\alpha}''$'s are substituted for the $\alpha$'s in our annual plant population model \parencite{Godoy2014, Bimler2018}. 
         \begin{equation}
             {\alpha}''_{ij} = \frac{g_{j} \alpha_{ij}}{ln(\eta_{i})}
         \end{equation}
         with $\eta_{i} = \frac{\lambda_{i} g_{i}}{\theta_{i}}$ and $\theta_{i} = 1 - (1 - g_{i})(s_{i})$. % \(ln(\eta_{i})\) is thus equivalent to \(\beta_{i0}\) in Eqs. \ref{nddm} and \ref{scaling}.
-        Note that because our model evaluates the rate of change of seeds in the seed bank, 'per-capita' here refers to changes 'per seed in the seed bank' of a focal species. Substituting ${\alpha}''$'s for $\alpha$'s in Eq.~\ref{ifm} gives us: 
+        Note that our model evaluates the rate of change of seeds in the seed bank, and this is reflected in the scaling terms used to compare interaction strengths between focal species. Substituting ${\alpha}''$'s for $\alpha$'s in Eq.~\ref{ifm} gives us: 
     
         \begin{equation}
             \frac{N_{i, t+1}}{N_{i, t}} = (1 - \theta_{i}) + \theta_{i} \eta_{i} e^{-ln(\eta_{i})({\alpha}''_{ii} N_{i, t} + {\alpha}''_{ij} N_{j, t})}
